WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
103421
TextTrackList's .onremovetrack is missing from IDL
https://bugs.webkit.org/show_bug.cgi?id=103421
Summary
TextTrackList's .onremovetrack is missing from IDL
Antoine Quint
Reported
2012-11-27 08:38:36 PST
We fail the Opera-submitted test at
http://w3c-test.org/html/tests/submission/Opera/media/interfaces/TextTrackList/onremovetrack.html
. The failure is simply caused by our not supporting the "onremovetrack" property on the TextTrackList interface.
Attachments
Patch
(5.42 KB, patch)
2013-04-11 10:08 PDT
,
Brendan Long
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2012-11-27 08:38:43 PST
<
rdar://problem/12758185
>
Brendan Long
Comment 2
2013-04-11 10:08:34 PDT
Created
attachment 197635
[details]
Patch
Eric Carlson
Comment 3
2013-04-11 10:15:57 PDT
This looks great, thanks. I will wait to mark the patch r+/cq+ until the bots have had their way with it.
Brendan Long
Comment 4
2013-04-11 14:26:04 PDT
I don't know how this change could possibly effect the output of ietestcenter/css3/grid/grid-items-003.htm (mac-wk2's failing test)..
Eric Carlson
Comment 5
2013-04-11 14:39:08 PDT
(In reply to
comment #4
)
> I don't know how this change could possibly effect the output of ietestcenter/css3/grid/grid-items-003.htm (mac-wk2's failing test)..
It is unrelated.
WebKit Commit Bot
Comment 6
2013-04-11 16:24:26 PDT
Comment on
attachment 197635
[details]
Patch Clearing flags on attachment: 197635 Committed
r148244
: <
http://trac.webkit.org/changeset/148244
>
WebKit Commit Bot
Comment 7
2013-04-11 16:24:28 PDT
All reviewed patches have been landed. Closing bug.
Brendan Long
Comment 8
2013-11-22 13:21:51 PST
***
Bug 101347
has been marked as a duplicate of this bug. ***
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug