TextTrackList's .onremovetrack is missing from IDL https://bugs.webkit.org/show_bug.cgi?id=103421

Patch by Brendan Long <b.long@cablelabs.com> on 2013-04-11
Reviewed by Eric Carlson.

Source/WebCore:

Fixed test media/track/opera/interfaces/TextTrackList/onremovetrack.html

* html/track/TextTrackList.cpp:
(TextTrackList::remove):
(TextTrackList::scheduleRemoveTrackEvent):
* html/track/TextTrackList.h:
(TextTrackList):
* html/track/TextTrackList.idl:

LayoutTests:

* media/track/opera/interfaces/TextTrackList/onremovetrack-expected.txt: Added.

Canonical link: https://commits.webkit.org/132856@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@148244 268f45cc-cd09-0410-ab3c-d52691b4dbfc